--- a/playbook.yml
+++ b/playbook.yml
@@ -15,19 +15,19 @@
 
     - name: Create service directory
       ansible.builtin.file:
-        path: "{{ project_directory }}"
+        path: "{{ project_directory }}/{{ tier }}"
         state: directory
         mode: "0755"
 
   tasks:
     - name: Copy Docker Compose file to server
       ansible.builtin.template:
-        src: "{{ playbook_dir }}/templates/compose.yml.j2"
-        dest: "{{ project_directory }}/compose.yml"
+        src: "{{ playbook_dir }}/templates/{{ tier }}.yml.j2"
+        dest: "{{ project_directory }}/{{ tier }}/compose.yml"
         mode: "0644"
 
     - name: Copy .env file to server
       ansible.builtin.copy:
         src: "{{ playbook_dir }}/.env"
-        dest: "{{ project_directory }}/.env"
+        dest: "{{ project_directory }}/{{ tier }}/.env"
         mode: "0644"
