--- a/playbook.yml
+++ b/playbook.yml
@@ -31,3 +31,10 @@
         src: "{{ playbook_dir }}/.env"
         dest: "{{ project_directory }}/{{ tier }}/.env"
         mode: "0644"
+
+    - name: Run containers with Docker Compose
+      community.docker.docker_compose_v2:
+        project_src: "{{ project_directory }}"
+        state: present
+        recreate: auto
+        pull: missing
