--- a/playbook.yml
+++ b/playbook.yml
@@ -27,6 +27,7 @@
         mode: "0644"
 
     - name: Copy .env file to server
+      when: tier != "frontend"
       ansible.builtin.copy:
         src: "{{ playbook_dir }}/.env"
         dest: "{{ project_directory }}/{{ tier }}/.env"
