--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -83,5 +83,8 @@ jobs:
                   tier: ${{ inputs.tier }}
                   volume_path: ${{ inputs.volume_path }}
                   db_type: ${{ inputs.db_type }}
+                  username: ${{ secrets.REGISTRY_USER }}
+                  password: ${{ secrets.REGISTRY_TOKEN }}
+                  registry_url: ${{ secrets.REGISTRY }}
               run: |
-                  uv run ansible-playbook -i inventory.yml playbook.yml --extra-vars "traefik_rule=${traefik_rule} service_name=${service_name} docker_image=${docker_image} service_port=${service_port} network_name=${network_name} project_directory=${project_directory} tier=${tier} volume_path=${volume_path} db_type=${{ inputs.db_type }}"
+                  uv run ansible-playbook -i inventory.yml playbook.yml --extra-vars "traefik_rule=${traefik_rule} service_name=${service_name} docker_image=${docker_image} service_port=${service_port} network_name=${network_name} project_directory=${project_directory} tier=${tier} volume_path=${volume_path} db_type=${{ inputs.db_type }} username=${username} password=${password} registry_url=${registry_url}"
