--- a/playbook.yml
+++ b/playbook.yml
@@ -39,6 +39,7 @@
         registry_url: "{{ registry_url }}"
         username: "{{ username }}"
         password: "{{ password }}"
+        reauthorize: true
 
     - name: Run containers with Docker Compose
       community.docker.docker_compose_v2:
