--- a/playbook.yml
+++ b/playbook.yml
@@ -33,6 +33,11 @@
         dest: "{{ project_directory }}/{{ tier }}/.env"
         mode: "0644"
 
+    - name: Remove broken Docker auth config
+      ansible.builtin.file:
+        path: /root/.docker/config.json
+        state: absent
+
     - name: Authenticate Docker to private registry
       when: tier != "database"
       community.docker.docker_login:
