--- a/playbook.yml
+++ b/playbook.yml
@@ -1,7 +1,7 @@
 ---
 - name: Deployment Playbook
   hosts: all
-  become: true
+  become: false
   gather_facts: false
 
   vars:
@@ -40,3 +40,9 @@
         username: "{{ username }}"
         password: "{{ password }}"
         reauthorize: true
+
+    - name: Pull Docker images
+      when: tier != "database"
+      community.docker.docker_image:
+        name: "{{ docker_image }}"
+        source: pull
