--- a/playbook.yml
+++ b/playbook.yml
@@ -33,6 +33,14 @@
         dest: "{{ project_directory }}/{{ tier }}/.env"
         mode: "0644"
 
+    - name: Ensure Docker config directory exists
+      ansible.builtin.file:
+        path: /home/{{ username }}/.docker
+        state: directory
+        owner: "{{ username }}"
+        group: "{{ username }}"
+        mode: "0700"
+
     - name: Authenticate Docker to private registry
       when: tier != "database"
       community.docker.docker_login:
