cicd: Add more task

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,7 +27,7 @@ on:
                 required: true
                 type: string
 
-            docker_image_tag:
+            fqn_docker_image:
                 required: false
                 type: string
                 default: "latest"
@@ -82,15 +82,15 @@ jobs:
                   traefik_rule: ${{ inputs.traefik_rule }}
                   service_name: ${{ inputs.service_name }}
                   docker_image: ${{ inputs.docker_image }}
-                  docker_image_tag: ${{ inputs.docker_image_tag }}
+                  fqn_docker_image: ${{ inputs.fqn_docker_image }}
                   service_port: ${{ inputs.service_port }}
                   network_name: ${{ inputs.network_name }}
                   project_directory: ${{ inputs.project_directory }}
                   tier: ${{ inputs.tier }}
                   volume_path: ${{ inputs.volume_path }}
                   db_type: ${{ inputs.db_type }}
-                  username: pic
-                  password: Ngreenpig88
-                  registry_url: "repository.ah.imc.chillo.fr"
+                  username: ${{ vars.REGISTRY_USER }}
+                  password: ${{ secrets.REGISTRY_TOKEN }}
+                  registry_url: ${{ vars.REGISTRY }}
               run: |
-                  uv run ansible-playbook -i inventory.yml playbook.yml --extra-vars "traefik_rule=${traefik_rule} service_name=${service_name} docker_image=${docker_image} docker_image_tag=${docker_image_tag} service_port=${service_port} network_name=${network_name} project_directory=${project_directory} tier=${tier} volume_path=${volume_path} db_type=${{ inputs.db_type }} username=${username} password=${password} registry_url=${registry_url}"
+                  uv run ansible-playbook -i inventory.yml playbook.yml --extra-vars "traefik_rule=${traefik_rule} service_name=${service_name} docker_image=${docker_image} fqn_docker_image=${fqn_docker_image} service_port=${service_port} network_name=${network_name} project_directory=${project_directory} tier=${tier} volume_path=${volume_path} db_type=${{ inputs.db_type }} username=${username} password=${password} registry_url=${registry_url}"
