--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,8 +26,9 @@ on:
             docker_image:
                 required: true
                 type: string
+                description: "The fully qualified Docker image name (without tag)"
 
-            fqn_docker_image:
+            docker_image_tag:
                 required: false
                 type: string
                 default: "latest"
@@ -82,7 +83,7 @@ jobs:
                   traefik_rule: ${{ inputs.traefik_rule }}
                   service_name: ${{ inputs.service_name }}
                   docker_image: ${{ inputs.docker_image }}
-                  fqn_docker_image: ${{ inputs.fqn_docker_image }}
+                  docker_image_tag: ${{ inputs.docker_image_tag }}
                   service_port: ${{ inputs.service_port }}
                   network_name: ${{ inputs.network_name }}
                   project_directory: ${{ inputs.project_directory }}
@@ -93,4 +94,4 @@ jobs:
                   password: ${{ secrets.REGISTRY_TOKEN }}
                   registry_url: ${{ vars.REGISTRY }}
               run: |
-                  uv run ansible-playbook -i inventory.yml playbook.yml --extra-vars "traefik_rule=${traefik_rule} service_name=${service_name} docker_image=${docker_image} fqn_docker_image=${fqn_docker_image} service_port=${service_port} network_name=${network_name} project_directory=${project_directory} tier=${tier} volume_path=${volume_path} db_type=${{ inputs.db_type }} username=${username} password=${password} registry_url=${registry_url}"
+                  uv run ansible-playbook -i inventory.yml playbook.yml --extra-vars "traefik_rule=${traefik_rule} service_name=${service_name} docker_image=${docker_image} docker_image_tag=${docker_image_tag} service_port=${service_port} network_name=${network_name} project_directory=${project_directory} tier=${tier} volume_path=${volume_path} db_type=${{ inputs.db_type }} username=${username} password=${password} registry_url=${registry_url}"
