--- a/playbook.yml
+++ b/playbook.yml
@@ -47,3 +47,10 @@
         name: "{{ docker_image }}"
         tag: "{{ docker_image_tag }}"
         source: pull
+
+    - name: Deploy service with Docker Compose
+      community.docker.docker_compose_v2:
+        project_src: "{{ project_directory }}/{{ tier }}"
+        state: present
+        recreate: auto
+        pull: missing
