cicd: Refactor and add healthcheck

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -26,12 +26,7 @@ on:
             docker_image:
                 required: true
                 type: string
-                description: "The fully qualified Docker image name (without tag)"
-
-            docker_image_tag:
-                required: false
-                type: string
-                default: "latest"
+                description: "The fully qualified Docker image name"
 
             tier:
                 required: true
@@ -47,6 +42,12 @@ on:
                 required: false
                 type: string
                 default: "postgresql"
+
+            healthcheck_url:
+                required: false
+                type: string
+                description: "The URL to check for service health"
+                default: ""
 
 jobs:
     deploy:
@@ -83,7 +84,6 @@ jobs:
                   traefik_rule: ${{ inputs.traefik_rule }}
                   service_name: ${{ inputs.service_name }}
                   docker_image: ${{ inputs.docker_image }}
-                  docker_image_tag: ${{ inputs.docker_image_tag }}
                   service_port: ${{ inputs.service_port }}
                   network_name: ${{ inputs.network_name }}
                   project_directory: ${{ inputs.project_directory }}
@@ -94,4 +94,16 @@ jobs:
                   password: ${{ secrets.REGISTRY_TOKEN }}
                   registry_url: ${{ vars.REGISTRY }}
               run: |
-                  uv run ansible-playbook -i inventory.yml playbook.yml --extra-vars "traefik_rule=${traefik_rule} service_name=${service_name} docker_image=${docker_image} docker_image_tag=${docker_image_tag} service_port=${service_port} network_name=${network_name} project_directory=${project_directory} tier=${tier} volume_path=${volume_path} db_type=${{ inputs.db_type }} username=${username} password=${password} registry_url=${registry_url}"
+                  uv run ansible-playbook -i inventory.yml playbook.yml --extra-vars "traefik_rule=${traefik_rule} service_name=${service_name} docker_image=${docker_image} service_port=${service_port} network_name=${network_name} project_directory=${project_directory} tier=${tier} volume_path=${volume_path} db_type=${{ inputs.db_type }} username=${username} password=${password} registry_url=${registry_url}"
+
+            - name: Clean up SSH keys
+              run: rm -rf ~/.ssh
+
+    test:
+        runs-on: ubuntu-24.04
+        needs: deploy
+        if: ${{ inputs.healthcheck_url != '' }}
+        steps:
+            - name: Verify service is running
+              run: |
+                  curl -f ${{ inputs.healthcheck_url }} || exit 1
